# Administracion_Conjunta

./: .firebaserc  .gitignore  ARQUITECTURA_PYTHON_PRODUCCION.md  EVIDENCIA_PANTALLAZO_INTEGRACION.md  GUIA_VISUAL_STUDIO.md  PERFILES_PRUEBA.md  QA_CREDENCIALES_262_CASAS.csv  QA_CREDENCIALES_262_CASAS.md  README.md  RELEASE_2026-03-06_v1.0.0.md  RELEASE_CHECKLIST.md  SMOKE_TEST_TECNICO_2026-03-09.md  docker-compose.backend.yml  firebase.json  firestore.indexes.json  firestore.rules  google-services.json  package-lock.json  storage.rules
android/: build.gradle  settings.gradle
android/app/: build.gradle  google-services.json  proguard-rules.pro
app/: .env.example  package-lock.json  package.json
app/scripts/: diagnostico-visualizacion.mjs  seed-firebase.mjs  verify-rbac-firestore.mjs
app/src/: App.tsx
app/src/config/: firebase.ts
app/src/lib/: backend.ts  responseTimeLogger.ts  utils.ts
app/src/store/: animalStore.ts  authStore.ts  (+11 more)
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/administracion_conjunta_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  caja_menor.py  health.py  pagos.py
backend/app/core/: config.py  firebase_admin.py
backend/app/schemas/: auditoria.py  auth.py  caja_menor.py  pagos.py
backend/app/services/: auditoria.py  caja_menor.py  pagos.py  reportes.py
backend/tests/performance/: README.md  generate_locust_tokens.py  locustfile.py
public/: App.tsx  index.html
public/types/: index.ts
y/: index.html
(+46 files in other folders)
